# University-Projects

./: README.md
CodiceEDP/: NuovaTriangolazione.m  Paraboliche.m  Sample_Square_Dirichlet.m  Sample_Square_Dirichlet_Neumann_compatto.m  assemblaCDStabilizzazione.m  assemblaCDStabilizzazioneP2.m  assemblaParabolica.m  assemblatore.m  assemblatore2.m  assemblatoreP2.m  assemblatoreP2Parabolica.m  bordiNeumann.m  bordiNeumannParabolica.m  solver.m  solverP2.m  solverP2Parabolica.m  solverParabolica.m
CuttingPolygonsC/: CMakeLists.txt  main.cpp
CuttingPolygonsC/src/: cutter.cpp  cutter.h  intersector.cpp  intersector.h  point.cpp  point.hpp  polygon.cpp  polygon.h  segment.cpp  segment.h  smartcutter.cpp  smartcutter.h  vertex.cpp  vertex.h
CuttingPolygonsC/test/: test_cutter.h  test_intersector.h  test_point.hpp  test_polygon.h  test_segment.h  test_smartCutter.h  test_vertex.h
cuttingPolygonsPython/: main.py
cuttingPolygonsPython/src/: cutter.py  intersector.py  point.py  polygon.py  segment.py  smartcutter.py  vertex.py
cuttingPolygonsPython/test/: test_cutter.py  test_intersector.py  test_point.py  test_polygon.py  test_segment.py  test_smartCutter.py  test_vertex.py
eigenfacesPy/: eigenfaces_test.py  eigenfaces_training.py  funzioniEF.py
